@startuml

title __MODELS's Class Diagram__\n

  namespace ninja.diku.models {
    abstract class ninja.diku.models.Model {
        # collection : MongoCollection<Document>
        # document : Document
        + Model()
        + delete()
        + equals()
        {abstract} + getCollection()
        + getDocument()
        {abstract} + getID()
        + getObject()
        + hashCode()
        {abstract} # init()
        # update()
    }
  }
  

  namespace ninja.diku.models {
    class ninja.diku.models.TicketModel {
        + TicketModel()
        + getCollection()
        + getContext()
        + getGuild()
        + getID()
        + getMessageId()
        + getTicket()
        {static} + getTicketModel()
        {static} + getTicketModelByMessageID()
        + getType()
        + getUser()
        + isOpen()
        + setMessage()
        + setOpen()
        # init()
    }
  }
  

  namespace ninja.diku.models {
    class ninja.diku.models.UserModel {
        + UserModel()
        + getCollection()
        + getEmail()
        + getID()
        + getMajor()
        + getProdigyPercentile()
        + getUserDiscord()
        {static} + getUserModel()
        {static} + getUserModel()
        {static} + isEmailVerified()
        + isMusicBanned()
        + isVerified()
        {static} + resetUserByID()
        + setEmail()
        + setMajor()
        + setMusicBanned()
        + setProdigyPercentile()
        + setVerified()
        # init()
    }
  }
  

  ninja.diku.models.Model o-- T : object
  ninja.diku.models.TicketModel -up-|> ninja.diku.models.Model
  ninja.diku.models.UserModel -up-|> ninja.diku.models.Model


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
